fix whitespaces

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,7 +57,7 @@ body {
 	width: 250px;
 	margin-left: -100%;
 	position: relative;
-	background: #B5E3FF;
+	background: #FFFFFF;
 }
 
 /* Footer
@@ -72,7 +72,9 @@ body {
 
 /* Old styles
 ------------------------------------------------------------------------------*/
-
+fieldset {
+	border: none;
+}
 h2 {
     font-size: 24px;
     line-height: 26px;
@@ -95,7 +97,6 @@ li {
 	position: relative;
 	left: 0;
 	display: block;
-	float: left;
 	margin: 0 10px 0 0;
 }
 .nav.pull-right {
@@ -103,7 +104,7 @@ li {
 	margin-left: 10px;
 	float: right;
 }
-.nav>li {
+.nav-collapse li {
 	display: block;
 	float: left;
 }
@@ -115,6 +116,9 @@ li {
 	color: #999;
 	text-decoration: none;
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+}
+.nav>li.active>a {
+	color: #000;
 }
 .author-logo {
 	width: 300px;
